--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -178,7 +178,8 @@
         </div>
     </nav>
 
-    <form action="">
+<form action="">
+    <div class="form-group">
         <div class="container d-block">
 
             <div class="container-fluid col-8 col-sm-10 mt-5 mt-sm-5" id="box" style="padding: 20px;">
@@ -224,7 +225,9 @@
                 </div>
             </div>
         </div>
-    </form>
+    </div>
+</form>
+
 
     <div class="d-flex justify-content-center mt-5" id="botão">
         <div>
