--- a/pages/objetos.html
+++ b/pages/objetos.html
@@ -182,18 +182,19 @@
             </div>
         </nav>
 
-        <!-- container dos cards -->
+<form action="" class="h-100">  
+    <div class="form-group h-100">
         <div class="container d-flex align-items-center h-100">
-
             <div class="container card h-75 w-75 p-3">
                 <div class="form-floating h-100">
                     <textarea class="form-control h-100" placeholder="Leave a comment here" id="floatingTextarea2"
-                        style="height: 80%"></textarea>
+                            style="height: 80%"></textarea>
                     <label for="floatingTextarea2">Objetos</label>
                 </div>
             </div>
-
-        </div>
+        </div> 
+    </div>
+</form>
         <!-- botoes do rodapé -->
         <div class="espaço_botao">
             <div class="botao">
