--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -279,7 +279,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="../images/avatar_bombeiro.png" width="60px" /></a>
                 <p class="navbar-title mt-3 fw-bold text">
-                    AVALIAÇÃO DA CINEMÁTICA
+                    SINAIS E SINTOMAS
                 </p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
@@ -393,9 +393,11 @@
             </div>
         </nav>
         <!-- CheckBox -->
-        <div class="casa mt-4">
-            <div class="column">
-                <form action="">
+
+    <div class="casa mt-4">
+        <div class="column">
+            <form action="">
+                <div class="form-group">
                     <div class="container-fluid-linha">
                         <div class="block px-3">
                             <div class="descrition d-flex" style="width: 100%;">ABDOMEM SENSÍVEL OU RÍGIDO
@@ -829,9 +831,10 @@
                             </div>
                         </div>
                     </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
+    </div>
         <!-- Botão Voltar e Proxima -->
         <div class="espaço_botao">
             <div class="botao">
