--- a/pages/situation.html
+++ b/pages/situation.html
@@ -227,6 +227,8 @@
                 </div>
             </div>
         </nav>
+<form action="">
+    <div class="form-group">
         <div class="casa mt-9">
             <div class="column">
                 <div class="block px-10">
@@ -247,6 +249,8 @@
                 </div>
             </div>
         </div>
+    </div>
+</form>
         <!-- Botão Voltar e Proxima -->
         <div class="espaço_botao">
             <div class="botao">
