--- a/pages/conducao.html
+++ b/pages/conducao.html
@@ -26,7 +26,7 @@
     <style>
         * {
             margin: 0;
-            padding: 0;
+            padding: 0;   
             box-sizing: border-box;
         }
 
@@ -107,6 +107,19 @@
                 width: 40% !important;
             }
         }
+        .espaço_botao {
+      display: flex;
+      width: 100%;
+      height: 10vh;
+      justify-content: center;
+    }
+
+    .botao {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 90%;
+    }
     </style>
 </head>
 
@@ -304,9 +317,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> 
         </form>
-    </div>
+        <div class="espaço_botao">
+            <div class="botao">
+              <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+              <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+            </div>
+          </div>
    
 
 
