--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -173,8 +173,7 @@
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS ENCONTRADOS
-                      SUSPEITOS</a>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
@@ -262,7 +261,7 @@
             <div class="card col-9 mt-5" style="padding: 16px">
               <label class="text">O QUE ACONTECEU (SINAIS E SINTOMAS)</label>
               <div class="form-floating">
-                <textarea class="form-control pt-2" id="sintomaTextarea"></textarea>
+                <textarea class="form-control pt-2" id="sintomaTextarea"></textarea> 
               </div>
             </div>
 
