--- a/pages/procedimentos.html
+++ b/pages/procedimentos.html
@@ -175,8 +175,7 @@
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS ENCONTRADOS
-                    SUSPEITOS</a>
+                  <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
@@ -210,8 +209,7 @@
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE CONDUÇÃO E DECISÃO DE
-                    TRANSPORTE</a>
+                  <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
