--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -261,8 +261,7 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
-                                            ENCONTRADOS SUSPEITOS</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -286,8 +285,7 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
-                                            CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
