--- a/pages/objetos.html
+++ b/pages/objetos.html
@@ -21,9 +21,6 @@
     <link rel="icon" href="../images/avatar_bombeiro.png" type="image/png">
     <!--Imagem icon-->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
     <style>
         /*Início do código CSS*/
 
@@ -145,8 +142,7 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
-                                            CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
