--- a/pages/procedimentos.html
+++ b/pages/procedimentos.html
@@ -137,8 +137,9 @@
     }
   </style>
 </head>
-
 <body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
   <!-- navbar -->
   <nav class="navbar navbar-dark" id="nav">
     <div class="container-fluid">
@@ -645,5 +646,4 @@
     </div>
   </div>
 </body>
-
 </html>
