--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -21,10 +21,6 @@
     <link rel="icon" href="../images/avatar_bombeiro.png" type="image/png">
     <!--Imagem icon-->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-
     <style>
         body {
             margin: 0;
@@ -311,9 +307,7 @@
                                         <hr class="dropdown-divider" />
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS
-                                            ENCONTRADOS
-                                            SUSPEITOS</a>
+                                        <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
                                     </li>
                                     <li>
                                         <hr class="dropdown-divider" />
@@ -347,9 +341,7 @@
                                         <hr class="dropdown-divider" />
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE
-                                            CONDUÇÃO E DECISÃO DE
-                                            TRANSPORTE</a>
+                                        <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
                                     </li>
                                     <li>
                                         <hr class="dropdown-divider" />
@@ -1004,5 +996,4 @@
         });
     </script>
 </body>
-
 </html>
