--- a/pages/conducao.html
+++ b/pages/conducao.html
@@ -69,6 +69,9 @@
             margin-bottom: 20px;
             border-radius: 10px;
         }
+        #dark{
+          color: white !important;
+        }
 
         .fonte {
             font-size: 14px;
@@ -150,7 +153,7 @@
                         aria-expanded="false">
                         CATEGORIAS
                       </a>
-                      <ul class="dropdown-menu dropdown-menu-dark">
+                      <ul class="dropdown-menu dropdown-menu-dark" style="background-color: #343a40;" id="dark">
                         <li>
                           <a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a>
                         </li>
