--- a/pages/perfilbombeiro.html
+++ b/pages/perfilbombeiro.html
@@ -42,21 +42,29 @@
         display: flex;
         margin: 0px;
     }
+
     #row1{
         background-color: #333333;
     }
+
     .form-control{
         width: 15%;
     }
+
     .foto{
         width: 23%;
         height: 60%;
         background-color: #c1c1c1;
         border-radius: 50%;
     }
+
     .upload{
         display: flex;
         flex-direction: column-reverse;
+    }
+
+    .card{
+      padding: 20px 24px 20px 24px;
     }
 </style>
 </head>
@@ -92,8 +100,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
-                                    ENCONTRADOS SUSPEITOS</a></li>
+                            <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -117,8 +124,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
-                                    CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                            <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -164,11 +170,25 @@
                     </div>
                 </div>
             </div>
-            <div class="row h-50">
+            <div class="row h-50 d-flex justify-content-center">
+                <div class="card col-8 mt-5">
+                    <div>
+                        <p>Minha Conta</p>
+                    </div>
 
+                    <div>
+                        <p>Informação do Usuário</p>
+                        <div class="mb-3">
+                            <label for="disabledTextInput" class="form-label">Disabled input</label>
+                            <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </form>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
