--- a/pages/procedimentos.html
+++ b/pages/procedimentos.html
@@ -654,7 +654,7 @@
                 <div class="descrition d-flex" style="width: 100%;">IGP/PC</div>
               </div>
               <div class="form-check-2">
-                <input class="form-check-input" name="grupo1" type="checkbox" value="" id="SAMUcheck">
+                <input class="form-check-input" name="grupo1" type="checkbox" value="" id="SAMUCheckbox">
                 <div class="descrition d-flex" style="width: 100%;">SAMU</div>
                 <div class="form-check-3">
                   <input class="form-check-input" name="grupo1" type="checkbox" value="" id="flexCheckDefault">
@@ -727,14 +727,14 @@
 <!-- Samu -->
 <script>
   document.addEventListener("DOMContentLoaded", function () {
-    const MEIOSCheckbox = document.querySelector('input[id="MEIOSCheckbox"]');
-    const containerMEIOS = document.querySelector('.container-fluid-teste');
+    const SAMUCheckbox = document.querySelector('input[id="SAMUCheckbox"]');
+    const containerSAMU = document.querySelector('.form-check-3');
 
-    MEIOSCheckbox.addEventListener('change', function () {
-      if (MEIOSCheckbox.checked) {
-        containerMEIOS.style.display = 'flex';
+    SAMUCheckbox.addEventListener('change', function () {
+      if (SAMUCheckbox.checked) {
+        containerSAMU.style.display = 'flex';
       } else {
-        containerMEIOS.style.display = 'none';
+        containerSAMU.style.display = 'none';
       }
     });
   });
