--- a/pages/procedimentos.html
+++ b/pages/procedimentos.html
@@ -152,9 +152,14 @@
     }
   </style>
 </head>
+
 <body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
   <!-- navbar -->
   <nav class="navbar navbar-dark" id="nav">
     <div class="container-fluid">
@@ -191,7 +196,8 @@
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
+                  <a class="dropdown-item" href="#" style="white-space: break-spaces">PROBLEMAS ENCONTRADOS
+                    SUSPEITOS</a>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
@@ -225,7 +231,8 @@
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
+                  <a class="dropdown-item" href="#" style="white-space: break-spaces">FORMA DE CONDUÇÃO E DECISÃO DE
+                    TRANSPORTE</a>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
@@ -657,12 +664,14 @@
                 <input class="form-check-input" name="grupo1" type="checkbox" value="" id="SAMUCheckbox">
                 <div class="descrition d-flex" style="width: 100%;">SAMU</div>
                 <div class="form-check-3">
-                  <input class="form-check-input" name="grupo1" type="checkbox" value="" id="flexCheckDefault">
-                  <div class="descrition d-flex" style="width: 100%;">USA</div>
-                </div>
-                <div class="form-check-3">
-                  <input class="form-check-input" name="grupo1" type="checkbox" value="" id="flexCheckDefault">
-                  <div class="descrition d-flex" style="width: 100%;">USB</div>
+                  <div>
+                    <input class="form-check-input" name="grupo1" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="descrition d-flex" style="width: 100%;">USA</div>
+                  </div>
+                  <div>
+                    <input class="form-check-input" name="grupo1" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="descrition d-flex" style="width: 100%;">USB</div>
+                  </div>
                 </div>
               </div>
               <div class="form-check-2">
@@ -724,22 +733,23 @@
     });
   </script>
 
-<!-- Samu -->
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const SAMUCheckbox = document.querySelector('input[id="SAMUCheckbox"]');
-    const containerSAMU = document.querySelector('.form-check-3');
+  <!-- Samu -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const SAMUCheckbox = document.querySelector('input[id="SAMUCheckbox"]');
+      const containerSAMU = document.querySelector('.form-check-3');
 
-    SAMUCheckbox.addEventListener('change', function () {
-      if (SAMUCheckbox.checked) {
-        containerSAMU.style.display = 'flex';
-      } else {
-        containerSAMU.style.display = 'none';
-      }
+      SAMUCheckbox.addEventListener('change', function () {
+        if (SAMUCheckbox.checked) {
+          containerSAMU.style.display = 'flex';
+        } else {
+          containerSAMU.style.display = 'none';
+        }
+      });
     });
-  });
-</script>
+  </script>
 
 
 </body>
+
 </html>
