--- a/pages/glasglow.html
+++ b/pages/glasglow.html
@@ -259,7 +259,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="4" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-3">ESPONTÂNEA</div>
@@ -270,7 +270,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="3" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-6">COMANDO VERBAL</div>
@@ -281,7 +281,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="2" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-7">ESTÍMULO DOLOROSO</div>
@@ -292,7 +292,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="1" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-3">NENHUMA</div>
@@ -311,7 +311,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="5" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-10">PALAVRAS E FRASES APROPRIADAS</div>
@@ -322,7 +322,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="4" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-8">PALAVRAS INAPROPRIADAS</div>
@@ -333,7 +333,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="3" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-10">CHORO PERSISTENTE OU GRITOS</div>
@@ -344,7 +344,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="2" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-9">SONS INCOMPREENSÍVEIS</div>
@@ -355,7 +355,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="1" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-10">NENHUMA RESPOSTA VERBAL</div>
@@ -375,7 +375,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="6" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-10">OBEDECE PRONTAMENTE</div>
@@ -385,7 +385,7 @@
               <div class="col-1">5</div>
               <div class="col-1">
                 <div class="form-check d-flex">
-                  <input name="grupo" class="form-check-input" type="checkbox" value="5" id="soma"
+                  <input name="grupo" class="form-check-input" type="checkbox" value="5" id="flexCheckDefault"
                     onclick="calcularSoma()">
                 </div>
               </div>
@@ -397,7 +397,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="4" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-10">RETIRADA DO SEGMENTO ESTIMULADO</div>
@@ -408,7 +408,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="3" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-10">FLEXÃO ANORMAL (DECORTICAÇÃO)</div>
@@ -419,7 +419,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="2" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-10">EXTENSÃO ANORMAL (DECEREBRAÇÃO)</div>
@@ -430,7 +430,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupo" class="form-check-input" type="checkbox" value="1" onclick="calcularSoma()"
-                    id="soma">
+                    id="flexCheckDefault">
                 </div>
               </div>
               <div class="col-10">AUSÊNCIA (PARALISIA FLÁCIDA, HIPOTONIA)</div>
@@ -474,7 +474,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="4"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-3">ESPONTÂNEA</div>
@@ -485,7 +485,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="3"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-6">COMANDO VERBAL</div>
@@ -496,7 +496,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="2"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-7">ESTÍMULO DOLOROSO</div>
@@ -507,7 +507,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="1"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-3">NENHUMA</div>
@@ -526,7 +526,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="5"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-10">ORIENTADO</div>
@@ -537,7 +537,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="4"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-8">CONFUSO</div>
@@ -548,7 +548,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="3"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-10">PALAVRAS INAPROPRIADAS</div>
@@ -559,7 +559,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="2"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-9">PALAVRAS INCOMPREENSÍVEIS</div>
@@ -570,7 +570,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="1"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-10">NENHUMA</div>
@@ -589,7 +589,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="6"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-10">OBEDECE COMANDOS</div>
@@ -600,7 +600,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="5"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-10">LOCALIZA DOR</div>
@@ -611,7 +611,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="4"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-10">MOVIMENTO DE RETIRADA</div>
@@ -622,7 +622,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="3"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-10">FLEXÃO ANORMAL</div>
@@ -633,7 +633,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="2"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-10">EXTENSÃO ANORMAL</div>
@@ -644,7 +644,7 @@
               <div class="col-1">
                 <div class="form-check d-flex">
                   <input name="grupoMaiores5Anos" class="form-check-input" type="checkbox" value="1"
-                    id="soma1" onclick="calcularSoma()">
+                    id="flexCheckDefault" onclick="calcularSoma()">
                 </div>
               </div>
               <div class="col-10">NENHUMA</div>
@@ -679,6 +679,33 @@
   </form>
 
 
+  <script>
+    function calcularSoma() {
+      var soma = 0;
+      var checkboxes = document.querySelectorAll('input[name=grupo]:checked');
+      for (var i = 0; i < checkboxes.length; i++) {
+        soma += parseInt(checkboxes[i].value);
+      }
+      if (soma > 15) {
+        soma = 15;
+      }
+      document.getElementById('soma').value = soma;
+    }
+  </script>
+
+<!-- <script>
+  function calcularSoma() {
+    var soma = 0;
+    var checkboxes = document.querySelectorAll('input[name=grupoMaiores5Anos]:checked');
+    for (var i = 0; i < checkboxes.length; i++) {
+      soma += parseInt(checkboxes[i].value);
+    }
+    if (soma > 15) {
+      soma = 15;
+    }
+    document.getElementById('soma').value = soma;
+  }
+</script> -->
 
 
 
