--- a/pages/situation.html
+++ b/pages/situation.html
@@ -167,7 +167,8 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
+                                            ENCONTRADOS SUSPEITOS</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -191,7 +192,8 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                            CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -225,30 +227,30 @@
                 </div>
             </div>
         </nav>
-<form action="">
-    <div class="form-group">
-        <div class="casa mt-9">
-            <div class="column">
-                <div class="block px-10">
-                    <div class="descrition d-flex">
-                        <div class="esp">INCONSCIENTE
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <form action="">
+            <div class="form-group">
+                <div class="casa mt-9">
+                    <div class="column">
+                        <div class="block px-10">
+                            <div class="descrition d-flex">
+                                <div class="esp">INCONSCIENTE
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="descrition d-flex">
-                        <div class="esp">CONSCIENTE
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <div class="descrition d-flex">
+                                <div class="esp">CONSCIENTE
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</form>
+        </form>
         <!-- Botão Voltar e Proxima -->
         <div class="espaço_botao">
             <div class="botao">
