--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -52,6 +52,7 @@
         color: white;
 
     }
+
     /* MENU */
     #nav {
         background-color: #333333;
@@ -87,46 +88,55 @@
         align-items: center;
         width: 90%;
     }
+
     @media screen and (min-width: 375px) {
-      #row{
-        display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .col-4{
-        width: 85%;
-    }
-    .espaço_botao{
-        height: 7vh;
-    }
-    }
-    @media screen and (min-width: 1024px) {
-      #row{
-        display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-    .col-4{
-        width: 40%;
-    }
-    .espaço_botao{
-        height: 5vh;
+        #row {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .col-4 {
+            width: 85%;
+        }
+
+        .espaço_botao {
+            height: 7vh;
+        }
     }
 
+    @media screen and (min-width: 1024px) {
+        #row {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+
+        .col-4 {
+            width: 40%;
+        }
+
+        .espaço_botao {
+            height: 5vh;
+        }
+
     }
+
     @media screen and (min-width: 768px) {
-      #row{
-        display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-    .col-4{
-        width: 40%;
-    }
-    .espaço_botao{
-        height: 5vh;
-        margin-top: 15%;
-    }
+        #row {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+
+        .col-4 {
+            width: 40%;
+        }
+
+        .espaço_botao {
+            height: 5vh;
+            margin-top: 15%;
+        }
     }
 </style>
 
@@ -162,7 +172,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
+                                        ENCONTRADOS SUSPEITOS</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -186,7 +197,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                        CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -220,81 +232,81 @@
             </div>
         </div>
     </nav>
-<form action="">
-    <div class="form-group h-75">  
-        <div class="container h-100 mt-5 justify-content-center align-items-center">
-            <div class="row gap-4" id="row">
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">CICLISTA </span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+    <form action="">
+        <div class="form-group h-75">
+            <div class="container h-100 mt-5 justify-content-center align-items-center">
+                <div class="row gap-4" id="row">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">CICLISTA </span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">CONDUTOR CARRO</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">CONDUTOR CARRO</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">CONDUTOR MOTO</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">CONDUTOR MOTO</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">CLINICO</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">CLINICO</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">GESTANTE</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">GESTANTE</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">TRAUMA</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">TRAUMA</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">PASS.BAN.FRENTE</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">PASS.BAN.FRENTE</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">PAS.BCO.TRÁS</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">PAS.BCO.TRÁS</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">PAS.MOTO</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">PAS.MOTO</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 d-flex p-4 justify-content-between">
-                    <span class="d-flex">PEDESTRE</span>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <div class="col-4 d-flex p-4 justify-content-between">
+                        <span class="d-flex">PEDESTRE</span>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
                     </div>
-                </div>
-            </form>
-            </div>
-            <br>
-            <br>
+    </form>
+    </div>
+    <br>
+    <br>
+    </div>
+    <div class="espaço_botao">
+        <div class="botao">
+            <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+            <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
         </div>
-        <div class="espaço_botao">
-            <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
-            </div>
-        </div>
+    </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
