--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -35,7 +35,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        height: 100vh;
+        height: 78vh;
         width: 100vw;
         /* margin-top: 18%; */
     }
@@ -116,7 +116,7 @@
         <!-- Botão login -->
         <div class="welcome_botoes">
             <div>
-                <button class="botao_welcome" type="button" >Log in</button>
+                <button class="botao_welcome" type="button" onclick="window.location.href = '/login.html'">Log in</button>
             </div>
         </div>
     </div>
