--- a/pages/objetos.html
+++ b/pages/objetos.html
@@ -90,93 +90,116 @@
         <!-- navbar -->
         <nav class="navbar navbar-dark" id="nav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../images/avatar_bombeiro.png" width="60px"></a>
-                <p class="navbar-title mt-3 fw-bold">OBJETOS RECOLHIDOS</p>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                    aria-labelledby="offcanvasDarkNavbarLabel">
-                    <div class="offcanvas-header">
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    CATEGORIAS
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">SINAIS E SINTOMAS</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DO PACIENTE (GLASGOW)</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">LOCALIZAÇÃO DOS TRAUMAS</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">SINAIS VITAIS</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">OBJETOS RECOLHIDOS</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">VÍTIMA ERA</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">PROCEDIMENTOS EFETUADOS</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">MATERIAIS UTILIZADOS</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">OBSERVAÇÕES IMPORTANTES</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">AVALIAÇÃO DA CINEMÁTICA</a></li>
-
-                                </ul>
-                            </li>
-                            <li class="nav-item" style="list-style-type: none">
-                                <a class="nav-link" href="#">PERFIL</a>
-                            </li>
-                            <li class="nav-item" style="list-style-type: none">
-                                <a class="nav-link" href="#">SAIR</a>
-                            </li>
-                        </ul>
-                    </div>
+              <a class="navbar-brand" href="home.html"><img src="../images/avatar_bombeiro.png" width="60px" /></a>
+              <p class="navbar-title mt-3 fw-bold text">
+                OBJETOS RECOLHIDOS
+              </p>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+                aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
                 </div>
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+                    </li>
+      
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        CATEGORIAS
+                      </a>
+                      <ul class="dropdown-menu dropdown-menu-dark">
+                        <li>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/ocorrencia.html'">TIPO DE OCORRÊNCIA</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = '/pages/problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/sinaisesintomas.html'">SINAIS E SINTOMAS</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/glasglow.html'">AVALIAÇÃO DO PACIENTE (GLASGOW)</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/ocorrencia.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li><a class="dropdown-item" href="#" onclick="window.location.href = '/pages/sinais.html'">SINAIS VITAIS</a></li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/objetos.html'">OBJETOS RECOLHIDOS</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = '/pages/conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li><a class="dropdown-item" href="#" onclick="window.location.href = '/pages/vitimaera.html'">VÍTIMA ERA</a></li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/obsimportante.html'">OBSERVAÇÕES IMPORTANTES</a>
+                        </li>
+                        <li>
+                          <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="nav-item" style="list-style-type: none">
+                      <a class="nav-link" href="#" onclick="window.location.href = '/pages/perfilbombeiro.html'">PERFIL</a>
+                    </li>
+                    <li class="nav-item" style="list-style-type: none">
+                      <a class="nav-link" href="#">SAIR</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-        </nav>
+          </nav>
 
 <form action="" class="h-100">  
     <div class="form-group h-100">
