--- a/pages/home.html
+++ b/pages/home.html
@@ -273,19 +273,13 @@
     var redcard = document.getElementsByClassName('redcard')[0];
 
     redcard.addEventListener("click", function () {
-        window.location.href = "/pages/anamn";
-    });
-
-    var bluecard = document.getElementsByClassName('bluecard')[0];
-
-    bluecard.addEventListener("click", function () {
-        window.location.href = "https://g1.globo.com/";
+        window.location.href = "/pages/anamnesemédica.html";
     });
 
     var purplecard = document.getElementsByClassName('purplecard')[0];
 
     purplecard.addEventListener("click", function () {
-        window.location.href = "https://g1.globo.com/";
+        window.location.href = "/pages/objetos.html";
     });
 </script>
 
